# gridiron

./: .gitignore  README.md  pyproject.toml  test_grid.py
gridiron/: core.py
