[tool.poetry]
name = "gridiron"
version = "0.1.0"
description = ""
authors = ["Brian Luczkiewicz <brian@blucz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
comfy-proxy = { path = "../comfy-proxy", develop = true }
tqdm = "^4.67.1"
jinja2 = "^3.1.2"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
